k8s/gateway/gateway-https-simple.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: bank-gw
  namespace: bank
spec:
  selector:
    istio: ingressgateway
  servers:
    - port: { number: 80, name: http, protocol: HTTP }
      hosts: ["app.local"]
    - port: { number: 443, name: https, protocol: HTTPS }
      hosts: ["app.local"]
      tls:
        mode: SIMPLE
        credentialName: edge-tls          # secret in istio-system
        minProtocolVersion: TLSV1_2
